<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <EditText
            android:id="@+id/etIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="15"
            android:maxLines="1"
            android:text="192.168.1.87"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="20dip"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/lang_sp_type"
            android:entries="@array/lang_Type">

        </Spinner>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_init"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_init" />

        <Button
            android:id="@+id/btn_uninit"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_uninit" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />

    <EditText
        android:id="@+id/etPath"
        android:layout_width="400dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLength="400"
        android:maxLines="3"
        android:text="/mnt/internal_sd/scale/PLU.txt"
        android:textSize="20dip" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_selectPlu"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_select_plufile" />

        <CheckBox
            android:id="@+id/cb_pc"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/cb_link66file"
            />
        <Button
            android:id="@+id/btn_send"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_send_plu" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lb_info_plu_send"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_sendSyn"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:visibility="gone"
        android:text="send syn" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dip" />



    <EditText
        android:id="@+id/etPathHot"
        android:layout_width="400dip"
        android:layout_height="wrap_content"
        android:maxLength="400"
        android:maxLines="3"
        android:text="/mnt/internal_sd/scale/66hk.txt"
        android:layout_gravity="center_horizontal"
        android:textSize="20dip"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_selectHot"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_select_hkfile" />


        <Button
            android:id="@+id/btn_sendHot"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_send_hk" />

        <Button
            android:id="@+id/btn_sendHot_by_array"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_send_hk_by_array" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dip" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvplucnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_info_plu_read"
            android:layout_gravity="center|clip_horizontal"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvhkcnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_info_hk_read"
            android:layout_gravity="center|clip_horizontal"
            android:layout_weight="1"/>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_readplu"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_read_plu" />


        <Button
            android:id="@+id/btn_readhotkey"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btn_read_hk" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dip" />
</LinearLayout>